11_minikube/deployments/general/nakadi-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nakadi-ui
  labels:
    app: nakadi-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nakadi-ui
  template:
    metadata:
      labels:
        app: nakadi-ui
    spec:
      containers:
      - name: nakadi-ui
        image: roskenet/nakadi-ui:9.0.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 30
