11_minikube/deployments/general/nakadi-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nakadi-ui
spec:
  selector:
    app: nakadi-ui
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    name: ui
