11_minikube/deployments/general/nakadi-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nakadi-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nakadi-ui.minikube
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nakadi-ui
                port:
                  name: ui
